--- a/portfolio/src/styles/components/ContactForm.css
+++ b/portfolio/src/styles/components/ContactForm.css
@@ -10,6 +10,7 @@ form {
     display: flex;
     flex-direction: column;
     align-items: center;
+    border-radius: 5px;
 }
 label, span{
     color: hsl(252, 100%, 9%);
@@ -70,12 +71,14 @@ form button:active {
         height: 35px;
         font-size: 13px;
     }
+
 }
 
 /* Tablette paysage (1024px max) */
 @media (max-width: 1024px) {
     form {
         padding: 40px;
+        width: 90%;
     }
 
     form button {
