--- a/portfolio/src/styles/pages/Home.css
+++ b/portfolio/src/styles/pages/Home.css
@@ -48,7 +48,7 @@
 .buttonHeader button{
     max-width: 250px;
     width: 100%;
-    margin: auto;
+    margin: 0px 10px;
     padding: 10px;
     border-radius: 5px;
     box-shadow: 1px 4px 17px #06011c;
@@ -181,6 +181,8 @@ flex-direction: column-reverse;
     max-width: 200px;
     margin: 10px 30px;
        }
+
+
 }
 
 
